--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/commonjs"]
   path = deps/commonjs
   url = git://github.com/commonjs/commonjs.git
+[submodule "deps/erlv8"]
+	path = deps/erlv8
+	url = git://github.com/rpmessner/erlv8.git
